# The directory where the include files will be installed
libmgeffincludedir=$(includedir)/mgeff

# Which header files to install
libmgeffinclude_HEADERS=mgeff-common.h mgeff.h  \
        mgeff-animation.h mgeff-motioncurve.h mgeff-animationgroup.h \
        mgeff-effector.h mgeff-effector-source.h mgeff-window-animation.h mgeff-effector-sink.h  

EXTRA_DIST=
