# sync animation
add_executable(animation_sync animation_sync.c)

# async animation
add_executable(animation_async animation_async.c)

# control animation
add_executable(animation_control animation_control.c)

# callback animation
add_executable(animation_callback animation_callback.c)

# setproperty animation
add_executable(animation_setproperty animation_setproperty.c)

# setcontext animation
add_executable(animation_setcontext animation_setcontext.c)

# curve animation
add_executable(animation_curve animation_curve.c)

# group animation sequential
add_executable(group_animation_sequential group_animation_sequential.c)

# group animation parallel
add_executable(group_animation_parallel group_animation_parallel.c)

# effector
add_executable(effector effector.c)

# effector custom
add_executable(effector_custom effector_custom.c)

# animation window
add_executable(animation_window animation_window.c)
