AM_CPPFLAGS=-I../.. -I../../include -I../include 

SUBDIRS=

noinst_LTLIBRARIES=libeffectors.la

COMMON_SRCS= \
3DCompute.c     common-effector.c  effector-source.c        gl-rectrotate-effector.c  radarscan-effector.c  zoom-effector.c \
alpha-effector.c    cubic-effector.c   flip-effector.c      leafwindow-effector.c     scroll-effector.c \
centersplit-effector.c  effector.c     gl-coverflow-effector.c  opengl-manager.c          star-effector.c \
clear-effector.c    effector-sink.c    gl-cubeturn-effector.c   push-effector.c       zip-effector.c

libeffectors_la_SOURCES=$(COMMON_SRCS)

EXTRA_DIST=
