AM_CPPFLAGS=-I../.. -I../../include -I../include 

SUBDIRS=

noinst_LTLIBRARIES=libeffectors.la

COMMON_SRCS= \
    3DCompute.c \
    3DCompute.h \
    alpha-effector.c \
    alpha-effector.h \
    centersplit-effector.c \
    centersplit-effector.h \
    clear-effector.c \
    clear-effector.h \
    common-effector.c \
    common-effector.h \
    copy-effector.h \
    cubic-effector.c \
    cubic-effector.h \
    effector.c \
    effector.h \
    effector-sink.c \
    effector-sink.h \
    effector-source.c \
    effector-source.h \
    flip-effector.c \
    flip-effector.h \
    gl-coverflow-effector.c \
    gl-coverflow-effector.h \
    gl-cubeturn-effector.c \
    gl-cubeturn-effector.h \
    gl-rectrotate-effector.c \
    gl-rectrotate-effector.h \
    leafwindow-effector.c \
    leafwindow-effector.h \
    opengl-manager.c \
    opengl-manager.h \
    push-effector.c \
    radarscan-effector.c \
    radarscan-effector.h \
    scroll-effector.c \
    scroll-effector.h \
    star-effector.c \
    star-effector.h \
    zip-effector.c \
    zip-effector.h \
    zoom-effector.c \
    zoom-effector.h

libeffectors_la_SOURCES=$(COMMON_SRCS)

EXTRA_DIST=
