AM_CPPFLAGS=-I../.. -I../../include -I../include 

SUBDIRS=

noinst_LTLIBRARIES=libeffectors.la

COMMON_SRCS= \
3DCompute.c     common-effector.c  effector-source.c        gl-rectrotate-effector.c  radarscan-effector.c  zoom-effector.c \
alpha-effector.c    cubic-effector.c   flip-effector.c      leafwindow-effector.c     scroll-effector.c \
centersplit-effector.c  effector.c     gl-coverflow-effector.c  opengl-manager.c          star-effector.c \
clear-effector.c    effector-sink.c    gl-cubeturn-effector.c   push-effector.c       zip-effector.c \
3DCompute.h            cubic-effector.h        gl-cubeturn-effector.h        star-effector.h \
alpha-effector.h        effector-sink.h            gl-rectrotate-effector.h    zip-effector.h \
centersplit-effector.h        effector-source.h        leafwindow-effector.h        zoom-effector.h \
clear-effector.h        effector.h            opengl-manager.h \
common-effector.h        flip-effector.h            radarscan-effector.h \
copy-effector.h            gl-coverflow-effector.h        scroll-effector.h


libeffectors_la_SOURCES=$(COMMON_SRCS)

EXTRA_DIST=
